# fungerbil

./: .gitignore  .gitmodules  BLUEPRINT.md  BasicBridge.sym  CIRCUITSPEC.md  MONEROZK.md  README.md  STAGENET_INTEGRATION_GUIDE.md  SYNTHWRAP.md  arciumBridgeSpec.md  monero_proper.r1cs  monero_proper.sym  package-lock.json  package.json  test-basic.js  test-circom.js  test-imports-2.js  test-imports-3.js  test-imports.js  tsconfig.json  working_test.r1cs  working_test.sym
BasicBridge_cpp/: BasicBridge.cpp  Makefile
BasicBridge_js/: BasicBridge.wasm
arcium-mint/: Anchor.toml
atomic-swap/: README.md
atomic-swap/server/: .env.example
bonsol-program/solana-program/: Anchor.toml
bonsol-project/: .gitignore  Cargo.toml  README.md  execution-request.json  manifest.json  monero-manifest.json  monero-test.json  test_program.py
bonsol-project/actual-anchor/: Cargo.toml
bonsol-project/bonsol-verifier/: Anchor.toml
bonsol-project/monero-secret-verifier/: Cargo.toml
bonsol-project/monero-secret-verifier/src/: lib.rs
bonsol-project/monero-verifier/: Cargo.toml
bonsol-project/monero-verifier/src/: lib.rs  main.rs
bonsol-project/say_hello/: Cargo.toml  README.md
bonsol-project/scripts/: build.sh  deploy.sh
bonsol-project/solana-program/: Cargo.toml
bonsol-project/solana-program/src/: lib.rs
bonsol-project/solana-secret-action/: Cargo.toml
bonsol-project/solana-secret-action/src/: lib.rs
bonsol-project/ts-client/: package.json
bridge/: Cargo.toml
bridge/docs/: overview.md  verkle.md  withdraw.md
bridge/src/: clsag.rs  lib.rs  types.rs  verkle.rs
bridge/tests/: deposit.rs  update_spent_set.rs
circom-gnosis/: .env.example  .gitignore  constructor-args.js  hardhat.config.js  monero_bridge.circom
circom-gnosis/contracts/: WrappedMonero.sol
circom-gnosis/oracle/: README.md  deployment.json  monero-oracle.js
circom-gnosis/scripts/: deploy_gnosis.js  lp_deposit.js  lp_withdraw.js  register_lp.js  setup_circuit.sh  test_mint.js  verify_gnosisscan.js  wrap_xdai.js
circuits/: BasicBridge.circom  Ed25519PointAdd.circom  FieldToBytes.circom  MoneroBridgeSimple.circom  monero_actual.circom  monero_blockchain_verify.circom  monero_complete.circom  monero_complete_working.circom  monero_final.circom  monero_final_fixed.circom  monero_final_real.circom  monero_fixed.circom  monero_full_verify.circom  monero_payment.circom  monero_payment_compile.circom  monero_payment_fixed.circom  monero_payment_full.circom  monero_payment_real.circom  monero_payment_test.circom  monero_proper.circom  monero_proper_finish.circom  monero_real.circom  monero_valid.circom  monero_working.circom  monero_working_final.circom  range_proof.circom  simple_range.circom  working_test.circom
client/: proveMoneroPayment.ts
etest/: Anchor.toml
etest/tests/: etest.ts
frontend/: constants.js  index.html  style.css  swap.js
frontend/atomicSwap/: SolanaWallet.js  index.html  priceTracker.js  style.css  swap.js  test-prices.html
frontend/wxmr/: styles.css  tabs.js
ftest/artifacts/: add_together_raw_circuit_0.json  arx_ata_3VH1_spGb.json  arx_ata_6z2T_pfZg.json  arx_ata_C8ht_Zut2.json  arx_mint.json  arx_node_3VH1_spGb.json  arx_node_C8ht_Zut2.json  circuits_hash.txt  cluster_acc_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  mempool_acc.json  (+10 more)
fungerbilPitchdeck/: deck.tex
monero_proper_js/: monero_proper.wasm
multiplier_cpp/: multiplier.cpp
onchain/: MoneroPaymentVerifier.sol  onchain_MoneroPaymentVerifier_sol_MoneroPaymentVerifier.abi
pitchdeck/: ZeroXMR-Pitch-Deck.pptx  deck.tex
pushOracle/: Cargo.toml  README.md  README_ZKTLS.md  demo.rs  fetch_test.sh  libxmrData.rlib  run_oracle.sh  server.rs  solana_client.rs  solana_push.rs  test_connection.rs  test_oracle.py  test_zk_oracle.py  xmrData.rs
pushOracle/solana_program/: Cargo.toml
pushOracle/solana_program/src/: lib.rs
pushOracle/src/: lib.rs  server.rs  solana_verifier.rs  tls_verifier.rs  zk_tls.rs
react-ui/: SolanaWalletConnect.js  index.html
server/: .env.example  .gitignore  README.md  correct-secp256k1-implementation.js  evm-config.js  monero-key-exchange.js  monero-wallet-service.js  package-lock.json  package.json  swap-server.js  swap-utils.js  test-swap-server.js  test-web3-integration.js  usdc-to-xmr-handler.js  web3-swap-api.js  xmr-send-code.js  xmr-to-usdc-handler.js  xmr-wallet-fix.patch
simple_range_cpp/: simple_range.cpp
spendProof/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DLEQ_OPTIMIZATION_PLAN.md  QUICKSTART.md  RAPIDSNARK.md  README.md  REAL_TX_DATA.md  SECURITY_ADDITIONS.md  SECURITY_ANALYSIS.md  TEST_README.md  bridge_call.json  circuit_input.json  debug_p_derivation.js  deployment_base_sepolia.json  deployment_v3_fixed.json  dleq_proof.json  example_ethers.js  example_web3.js  full_witness.json  groth16_ultra_log.txt  hardhat.config.js  input.json  invalid_test_input.json  merkle_proofs.json  monero_bridge.circom  monero_bridge_ULTRA_239K.circom  monero_bridge_light.circom  monero_bridge_ultra_light.circom  monero_bridge_v54_final.r1cs  monero_bridge_v54_final.sym  package-lock.json  package.json  plonk_proof_log.txt  proof_benchmark.json  proof_data.json  proof_test.json  proof_tx.json  (+22 more)
svm-xmr/: protocol.md  spec.txt
working_test_js/: working_test.wasm
wrapped-monero-bridge/: .gitignore  Anchor.toml  CRYPTOGRAPHY.md  Cargo.toml  PRODUCTION.md  README.md  SUMMARY.md  demo.sh
wrapped-monero-bridge/programs/wxmr-bridge/: Cargo.toml
wrapped-monero-bridge/programs/wxmr-bridge/src/: lib.rs
wrapped-monero-bridge/src/: crypto.rs  ed25519_ops.rs  lib.rs
wxmr-token/: README_integration.md  enhanced_lib.rs  lib.rs  test_inputs.json
zk-monero/: README.md  package.json
zk-monero/onchain/anchor/: Anchor.toml  Cargo.toml
zk-proofs/: README.md  final-run-tests.sh  package-lock.json  package.json  tsconfig.json
zk-proofs/solana-program/: Cargo.toml
zk-proofs/solana-program/src/: lib.rs
zkMonero/: .gitignore  BasicBridge.r1cs  CIRCOM_README.md  MONEROZK.md  MONERO_BRIDGE.md  README.md  package.json
(+272 files in other folders)
