[package]
name = "verkle-xmr-bridge"
version.workspace = true
edition.workspace = true
description = "Verkle tree-based Monero bridge verification for Solana"
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "verkle_xmr_bridge"

[features]
default = []
no-entrypoint = []

[dependencies]
solana-program = "1.18"
pinocchio = "0.5.0"
borsh = "0.10.3"
curve25519-dalek = { version = "3.2", default-features = false, features = ["alloc", "u64_backend"] }

[dev-dependencies]
solana-sdk = "1.18.26"
litesvm = "0.2"