[package]
name = "push-oracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "server.rs"

[lib]
name = "xmr_data"
path = "xmrData.rs"

[dependencies]
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1.35", features = ["rt", "macros"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }