[package]
name = "push-oracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "legacy_server"
path = "server.rs"

[[bin]]
name = "solana_push"
path = "solana_push.rs"

[[bin]]
name = "demo"
path = "demo.rs"

[dependencies]
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1.35", features = ["rt", "macros", "io-util", "net"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
# Additional utilities
base64 = "0.21"
bs58 = "0.5"
url = "2.4"
chrono = "0.4"
borsh = "0.10"
rand = "0.8"
# Solana compatibility
solana-program = "1.17"
solana-sdk = "1.17"
solana-client = "1.17"