[package]
name = "wrapped-monero-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arcis-imports = "0.3.0"

# Cryptography for Monero keys
ed25519-dalek = "2.1"
curve25519-dalek = "4.1"
sha2 = "0.10"
sha3 = "0.10"
rand_core = "0.6"
rand = "0.8"

# For ZK proof verification (Groth16)
# Note: These may not work directly in Arcis MPC environment
# We'll implement what we can and stub the rest
ark-groth16 = { version = "0.4", optional = true }
ark-bn254 = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }

[features]
default = []
zk-proofs = ["ark-groth16", "ark-bn254", "ark-serialize"]
