[package]
name = "monero-secret-verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monero-verifier"
path = "src/main.rs"

[lib]
name = "monero_verifier"
path = "src/lib.rs"

crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
hex = "0.4"

[dependencies.risc0-zkvm]
version = "1.1"
features = ["std"]

[profile.release]
overflow-checks = true