[package]
name = "monero-verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monero-guest"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "0.21", features = ["std"] }
monero = { version = "0.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
hex = "0.4"
bytes = "1.0"

[build-dependencies]
risc0-build = "0.21"