[package]
name = "monero-secret-action"
version = "0.1.0"
description = "Monero secret verification and Solana action trigger"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1