[package]
name = "wxmr-bridge"
version = "0.1.0"
description = "Wrapped Monero Bridge - Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wxmr_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
arcium-anchor = "0.3.0"

# For Groth16 verification
# Note: Full verification may need to be done off-chain due to compute limits
solana-program = "1.17"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
