[package]
name = "monero-zk-verify"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "monero_zk_verify"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
groth16-solana = "0.1.0"
solana-program = "~1.14"
sha3 = "0.10.0"